# azure-ecs-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  run_example.sh
.github/workflows/: azure_e2e.yml  ci.yml  release.yml
docs/adr/: ADR-001-phase5-opt-out-arm-only.md  ADR-002-integration-tests-wiremock.md  ADR-003-azure-e2e-tests.md
examples/: mail.rs  mail_async.rs  mail_attach.rs  mail_attach_async.rs  mail_error_handling.rs  mail_retry_timeout.rs  mail_stream.rs  mail_wait.rs
hooks/: pre-push
src/: lib.rs
src/adapters/gateways/: acs_email.rs  acs_shared_key.rs
src/domain/entities/: models.rs
src/examples/: mail.rs
tests/: azure_e2e.rs
